@@ -14,6 +14,7 @@ Copyright (C) 2003 jcoverage ltd.
 Copyright (C) 2009 John Lewis         <lewijw a.t users d.o.t sourceforge d.o.t net>
 Copyright (C) 2005 Grzegorz Lukasik   <hauserx a.t users d.o.t sourceforge d.o.t net>
 Copyright (C) 2006 Jiri Mares         <jirimares a.t users d.o.t sourceforge d.o.t net>
+Copyright (C) 2009 Amit Nithianandan  <ANithian a.t gmail d.o.t com>
 Copyright (C) 2005 Olivier Parent     <olivier-parent a.t users d.o.t sourceforge d.o.t net>
 Copyright (C) 2005 Alex Ruiz          <alruiz15 a.t users d.o.t yahoo d.o.t com>
 Copyright (C) 2005 James Seigel       <cgul a.t users d.o.t sourceforge d.o.t net>
